--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,6 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="choose_exercise">Choose exercise</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
